correccion de img bckgr

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     background-color: rgba(22, 21, 21);
-    background-image: url("img/bg.png");
+    background-image: url("/img/bg.png");
     display: grid;
     grid-template: 50px 1fr 90px / 1fr;
     grid-template-areas: "nav"
